Bug 969388 - Null-check the bundle ID to avoid 10.9 crash in CTFontManagerSetAutoActivationSetting. r=smichaud