gfx/thebes/gfxPlatformMac.cpp
@@ -46,6 +46,12 @@ DisableFontActivation()
         mainBundleID = ::CFBundleGetIdentifier(mainBundle);
     }
 
+    // bug 969388 and bug 922590 - mainBundlID as null is sometimes problematic
+    if (!mainBundleID) {
+        NS_WARNING("missing bundle ID, packaging set up incorrectly");
+        return;
+    }
+
     // if possible, fetch CTFontManagerSetAutoActivationSetting
     void (*CTFontManagerSetAutoActivationSettingPtr)
             (CFStringRef, AutoActivationSetting);
